--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Calculadoras Nutricionais, saiba seu peso ideal, calcule quantas calorias deve consumir por dia para manutenção, perda ou ganho de peso e faça a ingestão adequada do consumo de água. IMC,TMB,GET,VET,H2O">
     <title>Calculadoras Nutricionais</title>
     <link rel="icon" href="./assets/TitleIcon.svg">
     <link rel="stylesheet" href="./styles/index.css">
@@ -245,7 +246,7 @@
 
     <footer>
         <section onclick="backTop()" id="backTop">
-            <img src="./assets/up-arrow.svg">
+            <img src="./assets/up-arrow.svg" alt="Volte para o Topo">
         </section>
     </footer>
 
