--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <div class="containerText">
                 <h1>O que é TMB ?</h1>
-                <p>A Taxa Metáboilica Basal (TMB), é o <strong>mínimo de calórias necesárias para manter as funções do organismo em repouso</strong>, como os batimentos cardíacos, a pressão arterial, a respiração e a manutenção da temperatura corporal.</p>
+                <p>A Taxa Metabólica Basal (TMB), é o <strong>mínimo de calorias necessárias para manter as funções do organismo em repouso</strong>, como os batimentos cardíacos, a pressão arterial, a respiração e a manutenção da temperatura corporal.</p>
             </div>
 
             <div class="containerCalc">
@@ -134,7 +134,7 @@
             
             <div class="containerText">
                 <h1>O que é FAT ?</h1>
-                <p>O Fator Atividade (FAT), é o cálculo realizado para avaliar a <strong>intensidade e duração dos exércicios</strong> que cada pessoa realiza durante o dia, ou seja, uma pessoa que realiza um percurso caminhando tem uma intensidade menor do que a pessoa que está correndo.
+                <p>O Fator Atividade (FAT), é o cálculo realizado para avaliar a <strong>intensidade e duração dos exercícios </strong> que cada pessoa realiza durante o dia, ou seja, uma pessoa que realiza um percurso caminhando tem uma intensidade menor do que a pessoa que está correndo.
                 <p>Portanto, conhecer como você realiza suas atividades durante o dia é <strong>muito importante</strong>, pois esse resultado influência de forma significativa em sua <strong>dieta</strong>, já que o cálculo é baseado em todas atividades realizadas durante o dia</p>
             </p>
             </div>
