--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="containerText">
                 <h1>O que é IMC ?</h1>
                 <p>O Índice de Massa Corporal (IMC), é um cálculo simples, fácil e rápido adotado pela Organização Mundial da Saúde (OMS) como referência internacional de obesidade, o seu resultado tem o objetivo mostra a <strong>avaliação do nível de gordura corporal</strong> de cada pessoa.</p>
+                <p><strong>Atenção: </strong>O resultado <strong>não é exato</strong>, ele serve como parâmetro de avaliação rápida, pois uma pessoa com alto percentual de massa magra pode apresentar "sobrepeso", e físicamente ela está saudável. Portanto, para uma avaliação exata é necessário um exame físico.</p>
             </div>
 
             <div class="containerCalc">
