html: erro de digitação

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                 <h3>Sexo</h3>
                 <select id="sexo"> 
-                    <option value="F">Femino</option>
+                    <option value="F">Feminino</option>
                     <option selected value="M">Masculino</option>
                 </select>
 
